add area and industry
