# api/controllers/area.js
@@ -1,0 +1,12 @@
+var areaCol = require('../helpers/areaCol');
+var assert = require('assert');
+
+function findArea(req, res) {
+  areaCol.findArea(function(doc) {
+    res.json(doc);
+  })
+}
+
+module.exports = {
+  findArea
+}
